--- a/style.css
+++ b/style.css
@@ -1,13 +1,53 @@
+* {
+    box-sizing: border-box;
+    background-color:lavender;
+    margin: 0px;
+    padding: 0px;
+  }
+ 
+      
+  
 .carousel-item img{
+    position:relative;
     
     margin-top: 20px;
-    height: 700px;
+    height: 450px;
     
 }
-
-
-.nav-item ul{
-    float: left;
-    width: 100%;
-    background-color:aqua;
+.col-md-10{
+    
+    
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
+
+/*img:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    
+  }*/
+
+/* Pitati Draganu: Kako da u ovom slucaju smanjim ili povecam, sliku po visini*/
+
+
+
+
+
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+    width: 100%;
+}
+
+
+
+
+
+    
+
+
+
