--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@
 
 
 
+.container .navbar-nav.mr-auto{
+    background-color:orange;
+}
 
 
 header{
@@ -43,11 +46,65 @@ header{
     width: 100%;
 }
 
-
-
-
-
+.hr{
+    border-top: 1px solid blue;
+    margin: 3px;
+    position: relative;
+    z-index: 200;
+}
     
 
+.hidden-xs{
+    Width:100%;
+    text-align:left;
+   
+    height: 30px;
+}
 
+.bel-nav{
+    width:100%;
+    height:65%;
+    float: left;
+}
 
+.container .img-thumbnail{
+    width:100;
+    height:100;
+}
+
+.container img{
+    height: 500px;
+    position: relative;
+}
+
+.container .nav-link{
+    color:yellow;
+}
+
+.container h1{
+    color:#e56a1a;
+    float: center;
+    position: relative;
+    font-weight: 500;
+    padding-bottom: 20px;
+    font-family: sans-serif;
+}
+.container  hr{
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 5px;
+  border-color: #e56a1a;
+  background-color:#e56a1a ;
+}
+
+.fall-food h1{
+    color: #e56a1a;
+    margin-top: 30px;
+    font-weight: 500;
+    margin-left: 578px;
+    
+}
